--- a/.env
+++ b/.env
@@ -22,8 +22,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
- DB_DATABASE=Practica4
- DB_USERNAME=sacag
+ DB_DATABASE=laravel
+ DB_USERNAME=root
  DB_PASSWORD=mysql123
 
 SESSION_DRIVER=database
